miniextendr-macros/tests/ui/fn_dots_non_macro_expr.stderr
error: dots expects `typed_list!(...)` macro
 --> tests/ui/fn_dots_non_macro_expr.rs:5:22
  |
5 | #[miniextendr(dots = "x")]
  |                      ^^^
